[package]
name = "adinmo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
err-context = "~0.1"
reqwest = { version = "~0.11", features = ["json"] }
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
tokio = { version = "~1.19", features = ["rt", "macros"] }
